# mlinoe_flavour

./: README.md  pyproject.toml
mlinoe_flavour/: toymodel.ipynb
mlinoe_flavour/toymodel/: Pi_1.parquet  Pi_1.yaml  Pi_7.parquet  Pi_7.yaml  SM.parquet  SM.yaml  _models.yaml  _observables.yaml  mathcalB.parquet  mathcalB.yaml  mathcalQ_5.parquet  mathcalQ_5.yaml  mathcalU_2.parquet  mathcalU_2.yaml  mathcalW.parquet  mathcalW.yaml  mathcalX.parquet  mathcalX.yaml  omega_1.parquet  omega_1.yaml  omega_4.parquet  omega_4.yaml  varphi.parquet  varphi.yaml  zeta.parquet  zeta.yaml
